src/freeRTOS/wrapper.rs

unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskEndScheduler( void );\n @endcode\n\n NOTE:  At the time of writing only the x86 real mode port, which runs on a PC\n in place of DOS, implements this function.\n\n Stops the real time kernel tick.  All created tasks will be automatically\n deleted and multitasking (either preemptive or cooperative) will\n stop.  Execution then resumes from the point where vTaskStartScheduler ()\n was called, as if vTaskStartScheduler () had just returned.\n\n See the demo application file main. c in the demo/PC directory for an\n example that uses vTaskEndScheduler ().\n\n vTaskEndScheduler () requires an exit function to be defined within the\n portable layer (see vPortEndScheduler () in port. c for the PC port).  This\n performs hardware specific operations such as stopping the kernel tick.\n\n vTaskEndScheduler () will cause all of the resources allocated by the\n kernel to be freed - but will not free resources allocated by application\n tasks.\n\n Example usage:\n @code{c}\n void vTaskCode( void * pvParameters )\n {\n   for( ;; )\n   {\n       // Task code goes here.\n\n       // At some point we want to end the real time kernel processing\n       // so call ...\n       vTaskEndScheduler ();\n   }\n }\n\n void vAFunction( void )\n {\n   // Create at least one task before starting the kernel.\n   xTaskCreate( vTaskCode, \"NAME\", STACK_SIZE, NULL, tskIDLE_PRIORITY, NULL );\n\n   // Start the real time kernel with preemption.\n   vTaskStartScheduler ();\n\n   // Will only get here when the vTaskCode () task has called\n   // vTaskEndScheduler ().  When we get here we are back to single task\n   // execution.\n }\n @endcode\n\n \\defgroup vTaskEndScheduler vTaskEndScheduler\n \\ingroup SchedulerControl"]
    pub fn vTaskEndScheduler();
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n void vTaskSuspendAll( void );\n @endcode\n\n Suspends the scheduler without disabling interrupts.  Context switches will\n not occur while the scheduler is suspended.\n\n After calling vTaskSuspendAll () the calling task will continue to execute\n without risk of being swapped out until a call to xTaskResumeAll () has been\n made.\n\n API functions that have the potential to cause a context switch (for example,\n xTaskDelayUntil(), xQueueSend(), etc.) must not be called while the scheduler\n is suspended.\n\n Example usage:\n @code{c}\n void vTask1( void * pvParameters )\n {\n   for( ;; )\n   {\n       // Task code goes here.\n\n       // ...\n\n       // At some point the task wants to perform a long operation during\n       // which it does not want to get swapped out.  It cannot use\n       // taskENTER_CRITICAL ()/taskEXIT_CRITICAL () as the length of the\n       // operation may cause interrupts to be missed - including the\n       // ticks.\n\n       // Prevent the real time kernel swapping out the task.\n       vTaskSuspendAll ();\n\n       // Perform the operation here.  There is no need to use critical\n       // sections as we have all the microcontroller processing time.\n       // During this time interrupts will still operate and the kernel\n       // tick count will be maintained.\n\n       // ...\n\n       // The operation is complete.  Restart the kernel.\n       xTaskResumeAll ();\n   }\n }\n @endcode\n \\defgroup vTaskSuspendAll vTaskSuspendAll\n \\ingroup SchedulerControl"]
    pub fn vTaskSuspendAll();
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n BaseType_t xTaskResumeAll( void );\n @endcode\n\n Resumes scheduler activity after it was suspended by a call to\n vTaskSuspendAll().\n\n xTaskResumeAll() only resumes the scheduler.  It does not unsuspend tasks\n that were previously suspended by a call to vTaskSuspend().\n\n @return If resuming the scheduler caused a context switch then pdTRUE is\n         returned, otherwise pdFALSE is returned.\n\n Example usage:\n @code{c}\n void vTask1( void * pvParameters )\n {\n   for( ;; )\n   {\n       // Task code goes here.\n\n       // ...\n\n       // At some point the task wants to perform a long operation during\n       // which it does not want to get swapped out.  It cannot use\n       // taskENTER_CRITICAL ()/taskEXIT_CRITICAL () as the length of the\n       // operation may cause interrupts to be missed - including the\n       // ticks.\n\n       // Prevent the real time kernel swapping out the task.\n       vTaskSuspendAll ();\n\n       // Perform the operation here.  There is no need to use critical\n       // sections as we have all the microcontroller processing time.\n       // During this time interrupts will still operate and the real\n       // time kernel tick count will be maintained.\n\n       // ...\n\n       // The operation is complete.  Restart the kernel.  We want to force\n       // a context switch - but there is no point if resuming the scheduler\n       // caused a context switch already.\n       if( !xTaskResumeAll () )\n       {\n            taskYIELD ();\n       }\n   }\n }\n @endcode\n \\defgroup xTaskResumeAll xTaskResumeAll\n \\ingroup SchedulerControl"]
    pub fn xTaskResumeAll() -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n TickType_t xTaskGetTickCount( void );\n @endcode\n\n @return The count of ticks since vTaskStartScheduler was called.\n\n \\defgroup xTaskGetTickCount xTaskGetTickCount\n \\ingroup TaskUtils"]
    pub fn xTaskGetTickCount() -> TickType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n TickType_t xTaskGetTickCountFromISR( void );\n @endcode\n\n @return The count of ticks since vTaskStartScheduler was called.\n\n This is a version of xTaskGetTickCount() that is safe to be called from an\n ISR - provided that TickType_t is the natural word size of the\n microcontroller being used or interrupt nesting is either not supported or\n not being used.\n\n \\defgroup xTaskGetTickCountFromISR xTaskGetTickCountFromISR\n \\ingroup TaskUtils"]
    pub fn xTaskGetTickCountFromISR() -> TickType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n uint16_t uxTaskGetNumberOfTasks( void );\n @endcode\n\n @return The number of tasks that the real time kernel is currently managing.\n This includes all ready, blocked and suspended tasks.  A task that\n has been deleted but not yet freed by the idle task will also be\n included in the count.\n\n \\defgroup uxTaskGetNumberOfTasks uxTaskGetNumberOfTasks\n \\ingroup TaskUtils"]
    pub fn uxTaskGetNumberOfTasks() -> UBaseType_t;
}
unsafe extern "C" {
    #[doc = " task. h\n @code{c}\n char *pcTaskGetName( TaskHandle_t xTaskToQuery );\n @endcode\n\n @return The text (human readable) name of the task referenced by the handle\n xTaskToQuery.  A task can query its own name by either passing in its own\n handle, or by setting xTaskToQuery to NULL.\n\n \\defgroup pcTaskGetName pcTaskGetName\n \\ingroup TaskUtils"]
    pub fn pcTaskGetName(xTaskToQuery: TaskHandle_t) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn xTaskGetStaticBuffers(
        xTask: TaskHandle_t,
        ppuxStackBuffer: *mut *mut StackType_t,
        ppxTaskBuffer: *mut *mut StaticTask_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    pub fn vApplicationStackOverflowHook(
        xTask: TaskHandle_t,
        pcTaskName: *mut ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    #[doc = " task.h\n @code{c}\n void vApplicationGetIdleTaskMemory( StaticTask_t ** ppxIdleTaskTCBBuffer, StackType_t ** ppxIdleTaskStackBuffer, configSTACK_DEPTH_TYPE * puxIdleTaskStackSize )\n @endcode\n\n This function is used to provide a statically allocated block of memory to FreeRTOS to hold the Idle Task TCB.  This function is required when\n configSUPPORT_STATIC_ALLOCATION is set.  For more information see this URI: https://www.FreeRTOS.org/a00110.html#configSUPPORT_STATIC_ALLOCATION\n\n @param ppxIdleTaskTCBBuffer A handle to a statically allocated TCB buffer\n @param ppxIdleTaskStackBuffer A handle to a statically allocated Stack buffer for the idle task\n @param puxIdleTaskStackSize A pointer to the number of elements that will fit in the allocated stack buffer"]
    pub fn vApplicationGetIdleTaskMemory(
        ppxIdleTaskTCBBuffer: *mut *mut StaticTask_t,
        ppxIdleTaskStackBuffer: *mut *mut StackType_t,
        puxIdleTaskStackSize: *mut usize,
    );
}
